argocd/applications/infrastructure/keycloak.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{},"creationTimestamp":"2023-06-29T01:29:13Z","generation":444,"labels":{"source":"external"},"managedFields":[{"apiVersion":"argoproj.io/v1alpha1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:labels":{".":{},"f:source":{}}},"f:spec":{".":{},"f:destination":{".":{},"f:namespace":{},"f:server":{}},"f:project":{},"f:source":{".":{},"f:chart":{},"f:helm":{".":{},"f:parameters":{}},"f:repoURL":{},"f:tar [...]
      synced (all tasks
      run)","operation":{"initiatedBy":{"username":"admin"},"retry":{},"sync":{"prune":true,"revision":"15.1.6","syncOptions":["CreateNamespace=true","PruneLast=true","Replace=true"],"syncStrategy":{"hook":{"force":true}}}},"phase":"Succeeded","startedAt":"2023-06-29T19:49:45Z","syncResult":{"resources":[{"group":"","hookPhase":"Running","kind":"ServiceAccount","message":"serviceaccount
      \"keycloak\" deleted\nserviceaccount/keycloak
      replaced","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Secret","message":"secret
      \"keycloak-postgresql\" deleted\nsecret/keycloak-postgresql
      replaced","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Secret","message":"secret
      \"keycloak\" deleted\nsecret/keycloak
      replaced","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"ConfigMap","message":"configmap
      \"keycloak-env-vars\" deleted\nconfigmap/keycloak-env-vars
      replaced","name":"keycloak-env-vars","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service
      \"keycloak-headless\" deleted\nservice/keycloak-headless
      replaced","name":"keycloak-headless","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service
      \"keycloak-postgresql-hl\" deleted\nservice/keycloak-postgresql-hl
      replaced","name":"keycloak-postgresql-hl","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service
      \"keycloak\" deleted\nservice/keycloak
      replaced","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service
      \"keycloak-postgresql\" deleted\nservice/keycloak-postgresql
      replaced","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"StatefulSet","message":"statefulset.apps
      \"keycloak\" deleted\nstatefulset.apps/keycloak
      replaced","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"StatefulSet","message":"statefulset.apps
      \"keycloak-postgresql\" deleted\nstatefulset.apps/keycloak-postgresql
      replaced","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"networking.k8s.io","hookPhase":"Running","kind":"Ingress","message":"ingress.networking.k8s.io
      \"keycloak\" deleted\ningress.networking.k8s.io/keycloak
      replaced","name":"keycloak","namespace":"keycloak","status":"Synced","syncPhase":"Sync","version":"v1"}],"revision":"15.1.6","source":{"chart":"keycloak","helm":{"parameters":[{"name":"ingress.enabled","value":"true"},{"name":"ingress.hostname","value":"keycloak.binesty.net"},{"name":"ingress.ingressClassName","value":"nginx"}]},"repoURL":"https://charts.bitnami.com/bitnami","targetRevision":"15.1.6"}}},"reconciledAt":"2023-06-29T23:27:52Z","resources":[{"kind":"ConfigMap","name":"keycloak [...]
      roll out complete: 1 new pods have been
      updated...","status":"Healthy"},"kind":"StatefulSet","name":"keycloak","namespace":"keycloak","status":"Synced","version":"v1"},{"group":"apps","health":{"message":"partitioned
      roll out complete: 1 new pods have been
      updated...","status":"Healthy"},"kind":"StatefulSet","name":"keycloak-postgresql","namespace":"keycloak","status":"Synced","version":"v1"},{"group":"networking.k8s.io","health":{"status":"Healthy"},"kind":"Ingress","name":"keycloak","namespace":"keycloak","status":"Synced","version":"v1"}],"sourceType":"Helm","summary":{"externalURLs":["http://keycloak.binesty.net/"],"images":["docker.io/bitnami/keycloak:21.1.2-debian-11-r0","docker.io/bitnami/postgresql:15.3.0-debian-11-r7"]},"sync":{"com [...]
  creationTimestamp: '2023-07-04T19:30:29Z'
  generation: 14858
  labels:
    source: external
  managedFields:
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:source: {}
        f:spec:
          .: {}
          f:destination:
            .: {}
            f:namespace: {}
            f:server: {}
          f:project: {}
          f:source:
            .: {}
            f:chart: {}
            f:helm: {}
            f:repoURL: {}
          f:syncPolicy:
            .: {}
            f:syncOptions: {}
        f:status:
          .: {}
          f:health: {}
          f:summary: {}
          f:sync:
            .: {}
            f:comparedTo:
              .: {}
              f:destination:
                .: {}
                f:namespace: {}
                f:server: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm: {}
                f:repoURL: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2023-07-04T19:30:29Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:source:
            f:helm:
              f:parameters: {}
            f:targetRevision: {}
      manager: argocd-server
      operation: Update
      time: '2023-09-28T16:48:13Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:controllerNamespace: {}
          f:health:
            f:status: {}
          f:history: {}
          f:operationState:
            .: {}
            f:finishedAt: {}
            f:message: {}
            f:operation:
              .: {}
              f:initiatedBy:
                .: {}
                f:username: {}
              f:retry: {}
              f:sync:
                .: {}
                f:prune: {}
                f:revision: {}
                f:syncOptions: {}
                f:syncStrategy:
                  .: {}
                  f:hook:
                    .: {}
                    f:force: {}
            f:phase: {}
            f:startedAt: {}
            f:syncResult:
              .: {}
              f:resources: {}
              f:revision: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm:
                  .: {}
                  f:parameters: {}
                f:repoURL: {}
                f:targetRevision: {}
          f:reconciledAt: {}
          f:resources: {}
          f:sourceType: {}
          f:summary:
            f:externalURLs: {}
            f:images: {}
          f:sync:
            f:comparedTo:
              f:source:
                f:helm:
                  f:parameters: {}
                f:targetRevision: {}
            f:revision: {}
            f:status: {}
      manager: argocd-application-controller
      operation: Update
      time: '2023-09-28T18:45:45Z'
  name: keycloak
  namespace: argocd
  resourceVersion: '12044466'
  uid: f516aa35-6abe-4b44-af93-decf29126871
  selfLink: /apis/argoproj.io/v1alpha1/namespaces/argocd/applications/keycloak
status:
  controllerNamespace: argocd
  health:
    status: Healthy
  history:
    - deployStartedAt: '2023-08-24T01:37:05Z'
      deployedAt: '2023-08-24T01:37:16Z'
      id: 27
      revision: 16.0.5
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.0.5
    - deployStartedAt: '2023-08-24T01:52:09Z'
      deployedAt: '2023-08-24T01:52:22Z'
      id: 28
      revision: 16.0.5
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.0.5
    - deployStartedAt: '2023-08-28T14:07:00Z'
      deployedAt: '2023-08-28T14:07:01Z'
      id: 29
      revision: 16.0.5
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.0.5
    - deployStartedAt: '2023-08-28T14:10:14Z'
      deployedAt: '2023-08-28T14:10:15Z'
      id: 30
      revision: 16.0.5
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.0.5
    - deployStartedAt: '2023-08-28T14:10:52Z'
      deployedAt: '2023-08-28T14:10:53Z'
      id: 31
      revision: 16.0.5
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.0.5
    - deployStartedAt: '2023-09-14T20:36:20Z'
      deployedAt: '2023-09-14T20:36:22Z'
      id: 32
      revision: 16.1.4
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.4
    - deployStartedAt: '2023-09-14T20:43:43Z'
      deployedAt: '2023-09-14T20:43:46Z'
      id: 33
      revision: 16.1.4
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.4
    - deployStartedAt: '2023-09-28T16:42:07Z'
      deployedAt: '2023-09-28T16:42:08Z'
      id: 34
      revision: 16.1.7
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
    - deployStartedAt: '2023-09-28T16:47:45Z'
      deployedAt: '2023-09-28T16:47:46Z'
      id: 35
      revision: 16.1.7
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
    - deployStartedAt: '2023-09-28T16:48:13Z'
      deployedAt: '2023-09-28T16:48:15Z'
      id: 36
      revision: 16.1.7
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
  operationState:
    finishedAt: '2023-09-28T16:48:15Z'
    message: successfully synced (all tasks run)
    operation:
      initiatedBy:
        username: admin
      retry: {}
      sync:
        prune: true
        revision: 16.1.7
        syncOptions:
          - CreateNamespace=true
          - PruneLast=true
          - Replace=true
        syncStrategy:
          hook:
            force: true
    phase: Succeeded
    startedAt: '2023-09-28T16:48:13Z'
    syncResult:
      resources:
        - group: ''
          hookPhase: Running
          kind: ServiceAccount
          message: |-
            serviceaccount "keycloak" deleted
            serviceaccount/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Secret
          message: |-
            secret "keycloak-postgresql" deleted
            secret/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Secret
          message: |-
            secret "keycloak" deleted
            secret/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: ConfigMap
          message: |-
            configmap "keycloak-env-vars" deleted
            configmap/keycloak-env-vars replaced
          name: keycloak-env-vars
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak-headless" deleted
            service/keycloak-headless replaced
          name: keycloak-headless
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak-postgresql-hl" deleted
            service/keycloak-postgresql-hl replaced
          name: keycloak-postgresql-hl
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak" deleted
            service/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "keycloak-postgresql" deleted
            service/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: StatefulSet
          message: |-
            statefulset.apps "keycloak" deleted
            statefulset.apps/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: StatefulSet
          message: |-
            statefulset.apps "keycloak-postgresql" deleted
            statefulset.apps/keycloak-postgresql replaced
          name: keycloak-postgresql
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
        - group: networking.k8s.io
          hookPhase: Running
          kind: Ingress
          message: |-
            ingress.networking.k8s.io "keycloak" deleted
            ingress.networking.k8s.io/keycloak replaced
          name: keycloak
          namespace: keycloak
          status: Synced
          syncPhase: Sync
          version: v1
      revision: 16.1.7
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
  reconciledAt: '2023-09-28T18:45:45Z'
  resources:
    - kind: ConfigMap
      name: keycloak-env-vars
      namespace: keycloak
      status: Synced
      version: v1
    - kind: Secret
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - kind: Secret
      name: keycloak-postgresql
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-headless
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-postgresql
      namespace: keycloak
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: keycloak-postgresql-hl
      namespace: keycloak
      status: Synced
      version: v1
    - kind: ServiceAccount
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - group: apps
      health:
        message: 'partitioned roll out complete: 1 new pods have been updated...'
        status: Healthy
      kind: StatefulSet
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
    - group: apps
      health:
        message: 'partitioned roll out complete: 1 new pods have been updated...'
        status: Healthy
      kind: StatefulSet
      name: keycloak-postgresql
      namespace: keycloak
      status: Synced
      version: v1
    - group: networking.k8s.io
      health:
        status: Healthy
      kind: Ingress
      name: keycloak
      namespace: keycloak
      status: Synced
      version: v1
  sourceType: Helm
  summary:
    externalURLs:
      - http://keycloak.binesty.corp/
    images:
      - docker.io/bitnami/keycloak:22.0.3-debian-11-r14
      - docker.io/bitnami/postgresql:15.4.0-debian-11-r45
  sync:
    comparedTo:
      destination:
        namespace: keycloak
        server: https://kubernetes.default.svc
      source:
        chart: keycloak
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: keycloak.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 16.1.7
    revision: 16.1.7
    status: Synced
spec:
  destination:
    namespace: keycloak
    server: https://kubernetes.default.svc
  project: infrastructure
  source:
    chart: keycloak
    helm:
      parameters:
        - name: ingress.enabled
          value: 'true'
        - name: ingress.hostname
          value: keycloak.binesty.corp
        - name: ingress.ingressClassName
          value: nginx
    repoURL: https://charts.bitnami.com/bitnami
    targetRevision: 16.1.7
  syncPolicy:
    syncOptions:
      - CreateNamespace=true
