argocd/applications/infrastructure/minio.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{},"creationTimestamp":"2023-06-29T03:08:37Z","generation":363,"labels":{"source":"external"},"managedFields":[{"apiVersion":"argoproj.io/v1alpha1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:labels":{".":{},"f:source":{}}},"f:spec":{".":{},"f:destination":{".":{},"f:namespace":{},"f:server":{}},"f:project":{},"f:source":{".":{},"f:chart":{},"f:helm":{".":{},"f:parameters":{}},"f:repoURL":{},"f:tar [...]
      synced (all tasks
      run)","operation":{"initiatedBy":{"username":"admin"},"retry":{},"sync":{"revision":"12.6.5","syncOptions":["CreateNamespace=true"],"syncStrategy":{"hook":{}}}},"phase":"Succeeded","startedAt":"2023-06-29T21:24:13Z","syncResult":{"resources":[{"group":"","hookPhase":"Running","kind":"ServiceAccount","message":"serviceaccount/minio
      configured. Warning: resource serviceaccounts/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Secret","message":"secret/minio
      configured. Warning: resource secrets/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"PersistentVolumeClaim","message":"persistentvolumeclaim/minio
      configured. Warning: resource persistentvolumeclaims/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"","hookPhase":"Running","kind":"Service","message":"service/minio
      configured. Warning: resource services/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"apps","hookPhase":"Running","kind":"Deployment","message":"deployment.apps/minio
      configured. Warning: resource deployments/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"},{"group":"networking.k8s.io","hookPhase":"Running","kind":"Ingress","message":"ingress.networking.k8s.io/minio
      configured. Warning: resource ingresses/minio is missing the
      kubectl.kubernetes.io/last-applied-configuration annotation which is
      required by  apply.  apply should only be used on resources created
      declaratively by either  create --save-config or  apply. The missing
      annotation will be patched
      automatically.","name":"minio","namespace":"minio","status":"Synced","syncPhase":"Sync","version":"v1"}],"revision":"12.6.5","source":{"chart":"minio","helm":{"parameters":[{"name":"ingress.enabled","value":"true"},{"name":"ingress.hostname","value":"minio.binesty.net"},{"name":"ingress.ingressClassName","value":"nginx"}]},"repoURL":"https://charts.bitnami.com/bitnami","targetRevision":"12.6.5"}}},"reconciledAt":"2023-06-29T23:24:52Z","resources":[{"health":{"status":"Healthy"},"kind":"Per [...]
  creationTimestamp: '2023-07-04T19:30:30Z'
  generation: 14583
  labels:
    source: external
  managedFields:
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:source: {}
        f:spec:
          .: {}
          f:destination:
            .: {}
            f:namespace: {}
            f:server: {}
          f:project: {}
          f:source:
            .: {}
            f:chart: {}
            f:helm: {}
            f:repoURL: {}
          f:syncPolicy:
            .: {}
            f:syncOptions: {}
        f:status:
          .: {}
          f:health: {}
          f:summary: {}
          f:sync:
            .: {}
            f:comparedTo:
              .: {}
              f:destination:
                .: {}
                f:namespace: {}
                f:server: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm: {}
                f:repoURL: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2023-07-04T19:30:30Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:source:
            f:helm:
              f:parameters: {}
            f:targetRevision: {}
      manager: argocd-server
      operation: Update
      time: '2023-09-28T17:02:15Z'
    - apiVersion: argoproj.io/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:controllerNamespace: {}
          f:health:
            f:status: {}
          f:history: {}
          f:operationState:
            .: {}
            f:finishedAt: {}
            f:message: {}
            f:operation:
              .: {}
              f:initiatedBy:
                .: {}
                f:username: {}
              f:retry: {}
              f:sync:
                .: {}
                f:prune: {}
                f:revision: {}
                f:syncOptions: {}
                f:syncStrategy:
                  .: {}
                  f:hook:
                    .: {}
                    f:force: {}
            f:phase: {}
            f:startedAt: {}
            f:syncResult:
              .: {}
              f:resources: {}
              f:revision: {}
              f:source:
                .: {}
                f:chart: {}
                f:helm:
                  .: {}
                  f:parameters: {}
                f:repoURL: {}
                f:targetRevision: {}
          f:reconciledAt: {}
          f:resources: {}
          f:sourceType: {}
          f:summary:
            f:externalURLs: {}
            f:images: {}
          f:sync:
            f:comparedTo:
              f:source:
                f:helm:
                  f:parameters: {}
                f:targetRevision: {}
            f:revision: {}
            f:status: {}
      manager: argocd-application-controller
      operation: Update
      time: '2023-09-28T18:48:45Z'
  name: minio
  namespace: argocd
  resourceVersion: '12045275'
  uid: 3f14b300-3bba-4f4e-bc9d-36bbfe339d0e
  selfLink: /apis/argoproj.io/v1alpha1/namespaces/argocd/applications/minio
status:
  controllerNamespace: argocd
  health:
    status: Healthy
  history:
    - deployStartedAt: '2023-07-07T13:36:47Z'
      deployedAt: '2023-07-07T13:36:48Z'
      id: 12
      revision: 12.6.5
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.6.5
    - deployStartedAt: '2023-07-07T14:37:24Z'
      deployedAt: '2023-07-07T14:37:26Z'
      id: 13
      revision: 12.6.5
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.6.5
    - deployStartedAt: '2023-07-07T17:10:09Z'
      deployedAt: '2023-07-07T17:10:10Z'
      id: 14
      revision: 12.6.5
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.6.5
    - deployStartedAt: '2023-08-01T13:19:29Z'
      deployedAt: '2023-08-01T13:19:32Z'
      id: 15
      revision: 12.6.5
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.6.5
    - deployStartedAt: '2023-08-23T23:52:05Z'
      deployedAt: '2023-08-23T23:52:10Z'
      id: 16
      revision: 12.6.5
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.6.5
    - deployStartedAt: '2023-08-24T00:09:33Z'
      deployedAt: '2023-08-24T00:09:41Z'
      id: 17
      revision: 12.8.0
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.8.0
    - deployStartedAt: '2023-08-24T01:15:32Z'
      deployedAt: '2023-08-24T01:15:46Z'
      id: 18
      revision: 12.8.0
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.8.0
    - deployStartedAt: '2023-08-24T01:53:34Z'
      deployedAt: '2023-08-24T01:53:48Z'
      id: 19
      revision: 12.8.0
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.8.0
    - deployStartedAt: '2023-09-14T21:31:17Z'
      deployedAt: '2023-09-14T21:31:19Z'
      id: 20
      revision: 12.8.4
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.net
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.8.4
    - deployStartedAt: '2023-09-28T17:02:15Z'
      deployedAt: '2023-09-28T17:02:17Z'
      id: 21
      revision: 12.8.9
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.8.9
  operationState:
    finishedAt: '2023-09-28T17:02:17Z'
    message: successfully synced (all tasks run)
    operation:
      initiatedBy:
        username: admin
      retry: {}
      sync:
        prune: true
        revision: 12.8.9
        syncOptions:
          - CreateNamespace=true
          - PruneLast=true
          - Replace=true
        syncStrategy:
          hook:
            force: true
    phase: Succeeded
    startedAt: '2023-09-28T17:02:15Z'
    syncResult:
      resources:
        - group: ''
          hookPhase: Running
          kind: ServiceAccount
          message: |-
            serviceaccount "minio" deleted
            serviceaccount/minio replaced
          name: minio
          namespace: minio
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Secret
          message: |-
            secret "minio" deleted
            secret/minio replaced
          name: minio
          namespace: minio
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: PersistentVolumeClaim
          message: persistentvolumeclaim/minio created
          name: minio
          namespace: minio
          status: Synced
          syncPhase: Sync
          version: v1
        - group: ''
          hookPhase: Running
          kind: Service
          message: |-
            service "minio" deleted
            service/minio replaced
          name: minio
          namespace: minio
          status: Synced
          syncPhase: Sync
          version: v1
        - group: apps
          hookPhase: Running
          kind: Deployment
          message: |-
            deployment.apps "minio" deleted
            deployment.apps/minio replaced
          name: minio
          namespace: minio
          status: Synced
          syncPhase: Sync
          version: v1
        - group: networking.k8s.io
          hookPhase: Running
          kind: Ingress
          message: |-
            ingress.networking.k8s.io "minio" deleted
            ingress.networking.k8s.io/minio replaced
          name: minio
          namespace: minio
          status: Synced
          syncPhase: Sync
          version: v1
      revision: 12.8.9
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.8.9
  reconciledAt: '2023-09-28T18:48:45Z'
  resources:
    - health:
        status: Healthy
      kind: PersistentVolumeClaim
      name: minio
      namespace: minio
      status: Synced
      version: v1
    - kind: Secret
      name: minio
      namespace: minio
      status: Synced
      version: v1
    - health:
        status: Healthy
      kind: Service
      name: minio
      namespace: minio
      status: Synced
      version: v1
    - kind: ServiceAccount
      name: minio
      namespace: minio
      status: Synced
      version: v1
    - group: apps
      health:
        status: Healthy
      kind: Deployment
      name: minio
      namespace: minio
      status: Synced
      version: v1
    - group: networking.k8s.io
      health:
        status: Healthy
      kind: Ingress
      name: minio
      namespace: minio
      status: Synced
      version: v1
  sourceType: Helm
  summary:
    externalURLs:
      - http://minio.binesty.corp/
    images:
      - docker.io/bitnami/minio:2023.9.23-debian-11-r0
  sync:
    comparedTo:
      destination:
        namespace: minio
        server: https://kubernetes.default.svc
      source:
        chart: minio
        helm:
          parameters:
            - name: ingress.enabled
              value: 'true'
            - name: ingress.hostname
              value: minio.binesty.corp
            - name: ingress.ingressClassName
              value: nginx
        repoURL: https://charts.bitnami.com/bitnami
        targetRevision: 12.8.9
    revision: 12.8.9
    status: Synced
spec:
  destination:
    namespace: minio
    server: https://kubernetes.default.svc
  project: infrastructure
  source:
    chart: minio
    helm:
      parameters:
        - name: ingress.enabled
          value: 'true'
        - name: ingress.hostname
          value: minio.binesty.corp
        - name: ingress.ingressClassName
          value: nginx
    repoURL: https://charts.bitnami.com/bitnami
    targetRevision: 12.8.9
  syncPolicy:
    syncOptions:
      - CreateNamespace=true
